--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,19 @@
         }
     ],
     "env": {
-        
+        "APP_ENV": "cemilan",
+        "APP_DEBUG": "true",
+        "APP_URL": "https://test-api-blond-kappa.vercel.app/",
+
+        "APP_CONFIG_CACHE": "/tmp/config.php",
+        "APP_EVENTS_CACHE": "/tmp/events.php",
+        "APP_PACKAGES_CACHE": "/tmp/packages.php",
+        "APP_ROUTES_CACHE": "/tmp/routes.php",
+        "APP_SERVICES_CACHE": "/tmp/services.php",
+        "VIEW_COMPILED_PATH": "/tmp",
+
+        "CACHE_DRIVER": "array",
+        "LOG_CHANNEL": "stderr",
+        "SESSION_DRIVER": "cookie"
     }
 }
