--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
         "APP_NAME": "cemilan",
         "APP_ENV": "local",
         "APP_DEBUG": "true",
-        "APP_URL": "https://test-api-blond-kappa.vercel.app/",
+        "APP_URL": "https://test-api-lovat.vercel.app/",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
