--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
     "version": 2,
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.7.1" }
+        "api/migrate.php": { "runtime": "vercel-php@0.7.1"}
     },
     "routes": [
         {
